# Kleverpepe.com

./: .env  .env.example  .gitignore  .gitpod.yml  ANALYSIS.txt  AUTOMATIC_FEATURES.md  AUTO_INIT_COMPLETE.md  AUTO_PAYOUT_SYSTEM.md  BUILD_TRIGGER.txt  CHANGES_MADE.md  COMPLETION_REPORT.md  COMPREHENSIVE_FUNCTIONALITY_TEST.md  CONTRACT_BUILD_STATUS.js  CONTRACT_INTEGRATION_COMPLETE.md  DEPLOY.js  DEPLOYMENT_BLOCKED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_FINAL.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_MANIFEST.json  DEPLOYMENT_READY.md  DEPLOYMENT_READY_FINAL.md  DEPLOYMENT_READY_FOR_MAINNET.md  DEPLOYMENT_READY_REPORT.md  DEPLOYMENT_READY_VERIFIED.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_RESEARCH.md  DEPLOYMENT_ROADMAP.md  DEPLOYMENT_SETUP_REQUIRED.md  DEPLOYMENT_SOLUTION.js  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUMMARY_FINAL.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  DEPLOY_NOW.txt  DEPLOY_SOLUTION.md  EXECUTIVE_SUMMARY.md  FEATURE_AUDIT.md  FINAL_COMPLETION_REPORT.md  FINAL_DEPLOY.js  (+161 more)
.netlify/: netlify.toml
cache/: solidity-files-cache.json
contracts/: KPEPEJackpot-simple.js  KPEPEJackpot.cpp  KPEPEJackpot.js
deployment-package/: KPEPEJackpot.js  deployment-info.json  wallet-initialization.json
kleider-deploy/: DEPLOYMENT_GUIDE.md  README.md  bytecode.txt  bytecode_preview.txt
kleverPEPE_final_website_voxswap_widget/: index.html  styles 2.css
lottery/: CHECK_CONTRACT.html  DIRECT_WALLET_TX.html  FINAL_SOLUTION.html  FIX_NOW.html  INITIALIZE_NOW.html  INITIALIZE_WALLET_NOW.html  index.html  (+9 more)
rust-contract/wasm/: Cargo.toml
rust-contract/wasm/src/: lib.rs
(+21 files in other folders)
