[package]
name = "kpepe-jackpot-wasm"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = false

[profile.dev]
panic = "abort"

[dependencies.kpepe-jackpot]
path = ".."

[dependencies.klever-sc-wasm-adapter]
version = "0.45.0"

[workspace]
members = ["."]
